--- a/index.html
+++ b/index.html
@@ -90,58 +90,107 @@
 <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.9&key=dc4a6c4b00f306be58cc11e699a17211"></script>
 <script>
     $(document).ready(function() {
-      $('#register').on('click', function() {
-          $('#login-panel').fadeOut(100, function() {
-              $('#register-panel').fadeIn(100);
-          });
-      });
-      $('#backToLogin').on('click', function() {
-          $('#register-panel').fadeOut(100, function() {
-              $('#login-panel').fadeIn(100);
-          });
-      });
+        $('#register').on('click', function() {
+            $('#login-panel').fadeOut(100, function() {
+                $('#register-panel').fadeIn(100);
+            });
+        });
+        $('#backToLogin').on('click', function() {
+            $('#register-panel').fadeOut(100, function() {
+                $('#login-panel').fadeIn(100);
+            });
+        });
 
-      $('#login').on('click', function() {
-          var account = $('#username').val();
-          var pwd = $('#password').val();
+        $('#login').on('click', function() {
+            var account = $('#username').val();
+            var pwd = $('#password').val();
+            $.ajax({
+                url: '/login/checkPwd',
+                dataType: "json",
+                type:"post",
+                async: true,
+                data: {
+                    account: account,
+                    pwd: pwd
+                },
+                success:function (response) {
+                    console.log(response);
+                    window.location.href = 'html/main.html';
+                },
+                error: function(error) {
 
-          window.location.href = 'html/main.html';
-      });
+                }
+            });
+        });
 
-      $('#confirmRegister').on('click', function() {
-          var dataMap = {};
-          $('[bind-to]').each(function() {
-            dataMap[$(this).attr('bind-to')] = $(this).val();
-          });
-          if (dataMap['name'] === ""){
-              addErrorTips($('[bind-to="name"]').parents('.common-input'), '用户名不能为空');
-              return false;
-          }
-          if (dataMap['account'].length < 5) {
-              addErrorTips($('[bind-to="account"]').parents('.common-input'), '注册账号长度不能小于5位');
-              return false;
-          }
-          if (dataMap['tel'] === ""){
-              addErrorTips($('[bind-to="tel"]').parents('.common-input'), '请填写手机号');
-              return false;
-          }
-          if(!(/^1([358][0-9]|4[579]|66|7[0135678]|9[89])[0-9]{8}$/.test(dataMap['tel'])) || dataMap['tel'].length !== 11){
-              addErrorTips($('[bind-to="tel"]').parents('.common-input'), '请填写正确的手机号');
-              return false;
-          }
-          if (dataMap['pwd'].length < 6) {
-              addErrorTips($('[bind-to="pwd"]').parents('.common-input'), '密码成都不能小于6位');
-              return false;
-          }
-          if (dataMap['pwd'].length > 16) {
-              addErrorTips($('[bind-to="pwd"]').parents('.common-input'), '密码成都不能长于16位');
-              return false;
-          }
-          if (dataMap['pwd'] !== $('#pwdCheck').val()) {
-              addErrorTips($('#pwdCheck').parents('.common-input'), '请再次确认密码正确');
-              return false;
-          }
-      })
+        $('[bind-to="account"]').on('blur', function() {
+            var account = $(this).val();
+            $.ajax({
+                url: '/register/checkAccount',
+                dataType: "json",
+                type:"post",
+                async: true,
+                data: {
+                    account: account
+                },
+                success:function (response) {
+                    console.log(response);
+                    alert('success');
+                },
+                error: function(error) {
+
+                }
+            });
+        });
+    });
+
+    $('#confirmRegister').on('click', function() {
+        var dataMap = {};
+        $('[bind-to]').each(function() {
+          dataMap[$(this).attr('bind-to')] = $(this).val();
+        });
+        if (dataMap['name'] === ""){
+            addErrorTips($('[bind-to="name"]').parents('.common-input'), '用户名不能为空');
+            return false;
+        }
+        if (dataMap['account'].length < 5) {
+            addErrorTips($('[bind-to="account"]').parents('.common-input'), '注册账号长度不能小于5位');
+            return false;
+        }
+        if (dataMap['tel'] === ""){
+            addErrorTips($('[bind-to="tel"]').parents('.common-input'), '请填写手机号');
+            return false;
+        }
+        if(!(/^1([358][0-9]|4[579]|66|7[0135678]|9[89])[0-9]{8}$/.test(dataMap['tel'])) || dataMap['tel'].length !== 11){
+            addErrorTips($('[bind-to="tel"]').parents('.common-input'), '请填写正确的手机号');
+            return false;
+        }
+        if (dataMap['pwd'].length < 6) {
+            addErrorTips($('[bind-to="pwd"]').parents('.common-input'), '密码成都不能小于6位');
+            return false;
+        }
+        if (dataMap['pwd'].length > 16) {
+            addErrorTips($('[bind-to="pwd"]').parents('.common-input'), '密码成都不能长于16位');
+            return false;
+        }
+        if (dataMap['pwd'] !== $('#pwdCheck').val()) {
+            addErrorTips($('#pwdCheck').parents('.common-input'), '请再次确认密码正确');
+            return false;
+        }
+        $.ajax({
+            url: '/register/add',
+            dataType: "json",
+            type:"post",
+            async: true,
+            data: dataMap,
+            success:function (response) {
+                console.log(response);
+                alert('success');
+            },
+            error: function(error) {
+
+            }
+        });
     });
 
     $('input').on('click', function() {
