--- a/html/main.html
+++ b/html/main.html
@@ -214,28 +214,32 @@
       top: 0;
     }
     .input-container > .input-label {
+      font-size: 0.8em;
       left: 0;
       width: 28%;
       padding-right: 0.875em;
       text-align: right;
+      min-width: 120px;
     }
     .input-container > .input-content {
-      left: 28%;
-      width: 72%;
+      left: 30%;
+      width: 65%;
     }
-    .input-content input {
+    .input-content input,  .input-content select {
       height: 100%;
+      width: 100%;
       font-size: 1em;
       padding-right: 0.5em;
       border-radius: 0.25em;
       border: 1px solid #515151;
+      outline: none;
     }
     .page-content td[colspan='2'] .input-label {
-      width: 14%;
+      width: 15%;
     }
     .page-content td[colspan='2'] .input-content {
-      left: 14%;
-      width: 86%;
+      left: 15%;
+      width: 85%;
     }
 
     .table-data tr:nth-child(odd)
