--- a/html/main.html
+++ b/html/main.html
@@ -78,7 +78,7 @@
     .tag-container {
       border-top: 2px solid #FFFFFF;
       position: absolute;
-      top: 0em;
+      top: 0;
       right: 0;
       left: 210px;
       height: 2em;
@@ -96,7 +96,7 @@
       border-top-left-radius: 0.45em;
       border-top-right-radius: 0.45em;
       background-color: #D1D1D1;
-      box-shadow: 0 0px 5px rgba(0, 0, 0, 0.75);
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.75);
     }
     .tag:first-child {
       margin: 0;
@@ -686,7 +686,7 @@
                   }
               }
           });
-          console.log('<===== 成功执行menuOnload事件 =====>')
+          console.log('<===== 成功执行menuOnload事件 =====>');
 
           $(".menu-item[nav-to='carManagement']").click();
 
