--- a/html/main.html
+++ b/html/main.html
@@ -521,6 +521,7 @@
   }
 
   $(document).ready(function() {
+	  debugger;
       $.ajax({
           url: '/login/getMenu',
           dataType: "json",
