--- a/html/main.html
+++ b/html/main.html
@@ -658,7 +658,7 @@
 
                               $('.window-mask').fadeOut(200).find('.window-content').html('');
                           });
-                          updateEvent($('.window-content').find('.user-form'));
+                          updateEvent(this);
                       });
 
                       // query按键自带属性
